tests/src/frontend/typechecking/invalid/abstract_type_const3.sk
class Foo() {
  type T;
  type T2: this::T;
}

class Bar() {
  type T = Foo::T2;
}
